# phalanx

./: .claude_output_2012fffed433.json  .claude_output_600b07e8790b.json  .claude_output_98bae6000ef3.json  .gitignore  HANDOFF.md  README.md  RESEARCH.md  fix-config.json  get_swe_af_jobs.py  get_swe_af_status.py  landing_page.html  pyproject.toml  run_workflow.py  screenshot_test.py  screenshot_ui.py  sweep-config.json  test_playwright.py
.agora/specs/: adr-meta-framework.md  adr-task-skill-ux-unification.md  adr-terminology-and-abstractions.md  agent_handoff_context.md  future-roadmap.md  phase-1.2d-advanced-blocks.md  phase-1.3-dynamic-graph-engine.md  phase-1.4-api-and-extensibility.md  (+6 more)
apps/cli/: pyproject.toml
apps/cli/src/phalanx/: __init__.py  __main__.py  api.py  cli.py  config.py  init_cmd.py  mcp_server.py
apps/cli/src/phalanx/artifacts/: __init__.py  writer.py
apps/cli/src/phalanx/backends/: base.py  claude.py  codex.py  cursor.py  gemini.py
apps/cli/src/phalanx/comms/: __init__.py
apps/cli/src/phalanx/costs/: pricing.py
apps/cli/src/phalanx/monitor/: __init__.py  lifecycle.py  stall.py  team_monitor.py
apps/cli/src/phalanx/process/: manager.py
apps/cli/src/phalanx/skills/: failure_escalator.py
apps/cli/src/phalanx/soul/: skill_body.md  team_lead.md
apps/cli/src/phalanx/team/: __init__.py  config.py  spawn.py
apps/cli/tests/: test_api.py  test_mcp_server.py
apps/cli/tests/e2e/: test_context_resume.py  test_messaging_events.py  test_monitor_stall.py  test_resume.py  test_single_agent.py  test_team_workflow.py  test_v1_e2e.py
apps/cli/tests/future_backlog/: test_integration_backlog.py
apps/cli/tests/integration/: test_artifacts.py  test_cli.py  test_db_operations.py  test_heartbeat.py  test_lifecycle_monitor.py  test_process_manager.py  test_process_mgmt.py  test_stall_detection.py
apps/cli/tests/unit/: test_api.py  test_backends.py  test_config.py  test_cost_monitor.py  test_db.py  test_dependencies.py  test_file_lock.py  test_heartbeat.py  test_messaging.py  test_server_command.py  test_team_config.py
docs/: architecture.md
libs/core/: pyproject.toml
libs/core/src/phalanx_core/: __init__.py  blueprint.py  primitives.py  runner.py  state.py  workflow.py
libs/core/src/phalanx_core/blocks/: base.py  implementations.py  registry.py
libs/core/src/phalanx_core/llm/: client.py
libs/core/src/phalanx_core/yaml/: __init__.py  discovery.py  parser.py  schema.py
libs/core/tests/: test_advanced_blocks.py  test_blocks.py  test_blueprint.py  test_discovery.py  test_integration_advanced_blocks.py  test_integration_blocks_blueprint.py  test_integration_blocks_workflow.py  test_integration_cross_feature_boundaries.py  test_integration_debate_block_type_safety.py  test_integration_e2e_workflow.py  test_integration_merge_validation.py  test_integration_runner_primitives.py  test_integration_state_blocks.py  test_placeholder_block.py  test_primitives.py  test_primitives_extended.py  test_registry.py  test_runner.py  test_schema.py  test_state.py  test_workflow.py  test_yaml_parser.py
phalanx/: __init__.py  cli.py  config.py  db.py  init_cmd.py
specs/: bugfix-catalog-since-v0.3.0.md  fix-catalog-v030-v039.md
tests/: conftest.py
(+122 files in other folders)
