[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phalanx-cli"
version = "1.1.3"
description = "Open-source, vendor-agnostic multi-agent orchestration CLI"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "libtmux>=0.37.0",
    "tomli>=2.0;python_version<'3.12'",
    "tomli-w>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
phalanx = "phalanx.cli:main"

[tool.setuptools.packages.find]
include = ["phalanx*"]

[tool.setuptools.package-data]
phalanx = ["defaults/*.toml", "soul/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/future_backlog"
markers = [
    "integration: requires tmux and/or agent CLIs",
    "e2e: full system end-to-end tests",
    "future_backlog: tests for future phases (Phase 1.1+)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[dependency-groups]
dev = [
    "libtmux>=0.53.1",
]
