[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phalanx-cli"
version = "1.1.0"
description = "Open-source, vendor-agnostic multi-agent orchestration CLI"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "libtmux>=0.37.0",
    "tomli>=2.0;python_version<'3.12'",
    "tomli-w>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "phalanx-core",
    "mcp>=1.0.0",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
phalanx = "phalanx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phalanx*"]

[tool.setuptools.package-data]
phalanx = ["defaults/*.toml", "soul/*.md"]

[dependency-groups]
dev = [
    "libtmux>=0.53.1",
]

[tool.uv.sources]
phalanx-core = { workspace = true }
