[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phalanx-core"
version = "1.1.0"
description = "Phalanx Agent OS Core Engine"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["phalanx_core*"]
