[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phalanx-core"
version = "1.1.0"
description = "Phalanx Agent OS Core Engine"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["phalanx_core*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
